force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_FTest__c/agf__QA_FTest__c.object-meta.xml
<CustomObject>
    <label>FTest</label>
    <nameField>
        <displayFormat>FT-{00000000}</displayFormat>
        <label>FTest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>