force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_FTest__c/fields/agf__Annotation_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Annotation_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Annotation</label>
    <type>Checkbox</type>
</CustomField>