force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_FTest__c/fields/agf__FTest_Id__c.field-meta.xml
<CustomField>
    <fullName>agf__FTest_Id__c</fullName>
    <externalId>true</externalId>
    <label>FTest ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>