force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_FTest__c/fields/agf__Report_Exception__c.field-meta.xml
<CustomField>
    <fullName>agf__Report_Exception__c</fullName>
    <label>Exclude from Report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generated Test</fullName>
            </value>
            <value>
                <fullName>PLSQL Findbugs</fullName>
            </value>
            <value>
                <fullName>Unit Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>