force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_FTest__c/fields/agf__Test_Labels__c.field-meta.xml
<CustomField>
    <fullName>agf__Test_Labels__c</fullName>
    <label>Test Labels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>