force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_FTest__c/fields/agf__Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>agf__Test_Suite__c</fullName>
    <label>Test Suite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>basic</fullName>
                <default>true</default>
                <label>basic</label>
            </value>
            <value>
                <fullName>standard</fullName>
            </value>
            <value>
                <fullName>extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>